# Travel_API

./: .gitignore  README.md  pyproject.toml
tests/: test_auth.py  test_discount.py  test_food.py  test_province.py  test_register.py  test_user.py
tralvel_app/: main.py
tralvel_app/core/: config.py  database.py  security.py
tralvel_app/models/: food.py  province.py  user.py
tralvel_app/routers/: auth.py  discount.py  food.py  province.py  register.py  user.py
tralvel_app/schemas/: food.py  province.py  user.py
